--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "purescript-arrays": "^3.0.0",
     "purescript-lazy": "^2.0.0",
     "purescript-distributive": "^2.0.0",
-    "purescript-tuples": "^3.0.0"
+    "purescript-tuples": "^3.0.0",
+    "purescript-lists": "^3.4.0"
   },
   "devDependencies": {
     "purescript-console": "^2.0.0"
